//WARNING changing anything on this file essentially breaks production

syntax = "proto3";

package append_entry;

enum StatusCode {
    OK = 0; // Request was processed successfully. No further action needed.
    ERROR = 1; // General error. Investigate the cause.
    NOT_LEADER = 2; // Node is not the current leader. Retry with the correct leader.
    LEADER_CHANGED = 3; // Leadership has changed. Re-evaluate the leader and retry.
    LOG_MISMATCH = 4; // Log mismatch. Adjust prevLogIndex and prevLogTerm, then resend entries.
    TERM_MISMATCH = 5; // Term mismatch. Leader’s term outdated, step down and initiate a new election.
    RETRY = 6; // Temporary issue. Wait and retry the request.
    APPEND_SUCCESS = 7; // Entry appended successfully. Update commit index.
    APPEND_FAILURE_GENERAL = 8; // General failure. Retry or investigate.
    TERM_OUTDATED = 9; // Leader’s term outdated. Leader should step down.
    STORAGE_ERROR = 10; // Persistent storage error. Handle the error and retry.
    LEADER_COMMIT_INDEX_ADVANCED = 11; // Leader’s commit index advanced. Follower needs to catch up.
    FOLLOWER_IN_CANDIDATE_STATE = 12; // Follower is in candidate state. Leader may need to step down.
    FOLLOWER_IN_LEADER_STATE = 13; // Follower believes it is the leader. Resolve split-brain scenario.
    ENTRY_ALREADY_EXISTS = 14; // Entry already exists. Verify log consistency.
}

message Log {
    bytes address = 1;
    repeated bytes topics = 2;
    bytes data = 3;
    uint64 log_index = 4;
}

message TransactionExecutionEntry {
    bytes hash = 1; //H256
    uint64 nonce = 2;
    bytes value = 3; //
    bytes gas_price = 4;
    bytes input = 5;
    uint64 v = 6;
    bytes r = 7;
    bytes s = 8;
    optional uint64 chain_id = 9;
    string result = 10;
    bytes output = 11;
    bytes from = 12;
    optional bytes to = 13;
    uint64 transaction_index = 16;
    repeated Log logs = 17;
    bytes gas = 18;
    bytes receipt_cumulative_gas_used = 19;
    bytes receipt_gas_used = 20;
    bytes receipt_contract_address = 21;
    uint32 receipt_status = 22;
    bytes receipt_logs_bloom = 23;
    bytes receipt_effective_gas_price = 24;
    uint64 block_number = 25;
    optional uint64 tx_type = 26;
    bytes signer = 27;
    bytes gas_limit = 28;
    bool receipt_applied = 29;
    optional bytes deployed_contract_address = 30;
}

message AppendTransactionExecutionsRequest {
    string leader_id = 1;
    uint64 term = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated TransactionExecutionEntry executions = 5;
}

message AppendTransactionExecutionsResponse {
    StatusCode status = 1;
    string message = 2;
    uint64 last_committed_block_number = 3;
}

message BlockEntry {
    uint64 number = 1; //U64
    bytes hash = 2; //H256
    bytes transactions_root = 3; //H256
    uint64 gas_used = 4; //U64
    uint64 gas_limit = 5;
    bytes bloom = 6; //[u8]
    uint64 timestamp = 7; //UnixTime
    bytes parent_hash = 8; //H256
    bytes author = 9; //H160
    bytes extra_data = 10; //bytes
    bytes miner = 11; //H160
    bytes receipts_root = 12; //H256
    bytes uncle_hash = 13; //H256
    uint64 size = 14;
    bytes state_root = 15; //H256
    repeated bytes transaction_hashes = 16; //H256
}

message AppendBlockCommitRequest {
    string leader_id = 1;
    uint64 term = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    BlockEntry block_entry = 5;
}

message AppendBlockCommitResponse {
    StatusCode status = 1;
    string message = 2;
    uint64 last_committed_block_number = 3;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
    string message = 3;
}

service AppendEntryService {
    rpc AppendTransactionExecutions (AppendTransactionExecutionsRequest) returns (AppendTransactionExecutionsResponse);
    rpc AppendBlockCommit (AppendBlockCommitRequest) returns (AppendBlockCommitResponse);
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
}
